--- a/traducciones/template.html
+++ b/traducciones/template.html
@@ -49,6 +49,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
     <link rel="stylesheet" href="../source/css/botones.css">
     <link rel="stylesheet" href="../source/css/tarjetas.css">
     <link rel="stylesheet" href="../source/css/pop-up.css">
+    <link rel="stylesheet" href="../source/css/paginacion.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
 
@@ -148,6 +149,15 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                     <div class="nombre_seccion">
                         <h2>Traducciones</h2>
                     </div>
+                    <div class="paginacion" >
+                        <ul class="pagination justify-content-center">
+                            <li class='page-item'><a class='page-link' href=''><<</a></li>
+                            <li class='page-item active'><a class='page-link' href=''>1</a></li>
+                            <li class='page-item'><a class='page-link' href=''>2</a></li>
+                            <li class='page-item'><a class='page-link' href=''>3</a></li>
+                            <li class='page-item'><a class='page-link' href=''>>></a></li>
+                        </ul>
+                    </div>
                 <div class="container_cards">
 <!------------------------------------------------------------------------------------------------------>
 <!--Copiar esta parte señalada con <!- -> para cada mod que sea agregado-->      
@@ -188,7 +198,16 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
 
 <!--NO AGREGAR POR DEBAJO DE ESTA LINEA LAS NUEVAS CARTAS>
 <!-------------------------------------------------------------------------------------------------------->
-                </div>                    
+                </div>   
+                <div class="paginacion" >
+                    <ul class="pagination justify-content-center">
+                        <li class='page-item'><a class='page-link' href=''><<</a></li>
+                        <li class='page-item active'><a class='page-link' href=''>1</a></li>
+                        <li class='page-item'><a class='page-link' href=''>2</a></li>
+                        <li class='page-item'><a class='page-link' href=''>3</a></li>
+                        <li class='page-item'><a class='page-link' href=''>>></a></li>
+                    </ul>
+                </div>                 
                 </div>
                     
                     
