Creacion de bases de los menus para mods

--- a/traducciones/pagina-9.html
+++ b/traducciones/pagina-9.html
@@ -151,17 +151,17 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                     </div>
                     <div class="paginacion" >
                         <ul class="pagination justify-content-center">
-                            
-                            <li class='page-item active'><a class='page-link' href='pagina-1'>1</a></li>
-                            <li class='page-item '><a class='page-link' href='pagina-2'>2</a></li>
+                            <li class='page-item'><a class='page-link' href='pagina-8'><i class="fa-solid fa-backward"></i></a></li>
+                            <li class='page-item '><a class='page-link' href='pagina-1'>1</a></li>
+                            <li class='page-item active'><a class='page-link' href='pagina-2'>2</a></li>
                             <li class='page-item'><a class='page-link' href='pagina-3'>3</a></li>
                             <li class='page-item '><a class='page-link' href='pagina-4'>4</a></li>
                             <li class='page-item '><a class='page-link' href='pagina-5'>5</a></li>
                             <li class='page-item '><a class='page-link' href='pagina-6'>6</a></li>
                             <li class='page-item '><a class='page-link' href='pagina-7'>7</a></li>
                             <li class='page-item '><a class='page-link' href='pagina-8'>8</a></li>
-                            <li class='page-item'><a class='page-link' href='pagina-9'>9</a></li>
-                            <li class='page-item'><a class='page-link' href='pagina-2'><i class="fa-solid fa-forward"></i></a></li>
+                            <li class='page-item active'><a class='page-link' href='pagina-9'>9</a></li>
+                            <!-- <li class='page-item'><a class='page-link' href='pagina-3'><i class="fa-solid fa-forward"></i></a></li> -->
                         </ul>
                     </div>
                 <div class="container_cards">
@@ -901,17 +901,17 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
             </div>
                 <div class="paginacion" >
                     <ul class="pagination justify-content-center">
-                        
-                        <li class='page-item active'><a class='page-link' href='pagina-1'>1</a></li>
-                        <li class='page-item '><a class='page-link' href='pagina-2'>2</a></li>
+                        <li class='page-item'><a class='page-link' href='pagina-8'><i class="fa-solid fa-backward"></i></a></li>
+                        <li class='page-item '><a class='page-link' href='pagina-1'>1</a></li>
+                        <li class='page-item active'><a class='page-link' href='pagina-2'>2</a></li>
                         <li class='page-item'><a class='page-link' href='pagina-3'>3</a></li>
                         <li class='page-item '><a class='page-link' href='pagina-4'>4</a></li>
                         <li class='page-item '><a class='page-link' href='pagina-5'>5</a></li>
                         <li class='page-item '><a class='page-link' href='pagina-6'>6</a></li>
                         <li class='page-item '><a class='page-link' href='pagina-7'>7</a></li>
                         <li class='page-item '><a class='page-link' href='pagina-8'>8</a></li>
-                        <li class='page-item'><a class='page-link' href='pagina-9'>9</a></li>
-                        <li class='page-item'><a class='page-link' href='pagina-2'><i class="fa-solid fa-forward"></i></a></li>
+                        <li class='page-item active'><a class='page-link' href='pagina-9'>9</a></li>
+                        <!-- <li class='page-item'><a class='page-link' href='pagina-3'><i class="fa-solid fa-forward"></i></a></li> -->
                     </ul>
                 </div>
             </div>
