--- a/traducciones/pagina-9.html
+++ b/traducciones/pagina-9.html
@@ -153,7 +153,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                         <ul class="pagination justify-content-center">
                             <li class='page-item'><a class='page-link' href='pagina-8'><i class="fa-solid fa-backward"></i></a></li>
                             <li class='page-item '><a class='page-link' href='pagina-1'>1</a></li>
-                            <li class='page-item active'><a class='page-link' href='pagina-2'>2</a></li>
+                            <li class='page-item'><a class='page-link' href='pagina-2'>2</a></li>
                             <li class='page-item'><a class='page-link' href='pagina-3'>3</a></li>
                             <li class='page-item '><a class='page-link' href='pagina-4'>4</a></li>
                             <li class='page-item '><a class='page-link' href='pagina-5'>5</a></li>
@@ -903,7 +903,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                     <ul class="pagination justify-content-center">
                         <li class='page-item'><a class='page-link' href='pagina-8'><i class="fa-solid fa-backward"></i></a></li>
                         <li class='page-item '><a class='page-link' href='pagina-1'>1</a></li>
-                        <li class='page-item active'><a class='page-link' href='pagina-2'>2</a></li>
+                        <li class='page-item '><a class='page-link' href='pagina-2'>2</a></li>
                         <li class='page-item'><a class='page-link' href='pagina-3'>3</a></li>
                         <li class='page-item '><a class='page-link' href='pagina-4'>4</a></li>
                         <li class='page-item '><a class='page-link' href='pagina-5'>5</a></li>
