Actualización de paginas

--- a/traducciones/pagina-1.html
+++ b/traducciones/pagina-1.html
@@ -7,7 +7,7 @@
     PARA DUPLICAR ESTE ARCHIVO, LOS DEMAS TENDRAN QUE SEGUIR LA CONTINUIDAD, ES DECIR:
             pagina-1.html pagina-2.html pagina-3.html ..... Y ASÍ SUCESIVAMENTE.
 
-    CARTAS MAXIMAS PARA ESTA PÁGINA (15)
+    CARTAS MAXIMAS PARA ESTA PÁGINA (26)
 
     NOTA: ES IMPORTANTE QUE LOS NOMBRES DE ARCHIVOS SEAN TODAS EN MINUSCULAS Y CON GUIONES MEDIOS "-"
             SOLO SI OCUPA HACER ESPACIO.
@@ -174,6 +174,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                     </div>
                     <div class="description">
                         <h2>Exit Music</h2>
+                        <label class="seleccion-editor">SELECCIÓN DE LA COMUNIDAD</label>
                         <div class="info-mods">
                             <div class="duracion-card">
                                 <label>Duracion:<br> <b>Media</b></label>
@@ -206,6 +207,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                     </div>
                     <div class="description">
                         <h2>Salvation</h2>
+                        <label class="seleccion-editor">SELECCIÓN DE LA COMUNIDAD</label>
                         <div class="info-mods">
                             <div class="duracion-card">
                                 <label>Duracion:<br> <b>Largo</b></label>
@@ -237,6 +239,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                     </div>
                     <div class="description">
                         <h2>Monika Before Story</h2>
+                        <label class="seleccion-editor">SELECCIÓN DE LA COMUNIDAD</label>
                         <div class="info-mods">
                             <div class="duracion-card">
                                 <label>Duracion:<br> <b>Media</b></label>
@@ -299,6 +302,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                         </div>
                         <div class="description">
                             <h2>Relapse</h2>
+                            <label class="seleccion-editor">SELECCIÓN DE LA COMUNIDAD</label>
                             <div class="info-mods">
                                 <div class="duracion-card">
                                     <label>Duracion:<br> <b>Muy Largo</b></label>
@@ -420,6 +424,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                         </div>
                         <div class="description">
                             <h2>Not Oki Doki A lost Chapter</h2>
+                            <label class="seleccion-editor">SELECCIÓN DE LA COMUNIDAD</label>
                             <div class="info-mods">
                                 <div class="duracion-card">
                                     <label>Duracion:<br> <b>Media</b></label>
@@ -541,6 +546,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                         </div>
                         <div class="description">
                             <h2>Monika After Story</h2>
+                            <label class="seleccion-editor">SELECCIÓN DE LA COMUNIDAD</label>
                             <div class="info-mods">
                                 <div class="duracion-card">
                                     <label>Duracion:<br> <b>Infinito*</b></label>
@@ -571,6 +577,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                         </div>
                         <div class="description">
                             <h2>Outcast</h2>
+                            <label class="seleccion-editor">SELECCIÓN DE LA COMUNIDAD</label>
                             <div class="info-mods">
                                 <div class="duracion-card">
                                     <label>Duracion:<br> <b>Largo</b></label>
@@ -662,6 +669,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                         </div>
                         <div class="description">
                             <h2>Rainclouds</h2>
+                            <label class="seleccion-editor">SELECCIÓN DE LA COMUNIDAD</label>
                             <div class="info-mods">
                                 <div class="duracion-card">
                                     <label>Duracion:<br> <b>Largo</b></label>
@@ -813,6 +821,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                         </div>
                         <div class="description">
                             <h2>One Last Memory</h2>
+                            <label class="seleccion-editor">SELECCIÓN DE LA COMUNIDAD</label>
                             <div class="info-mods">
                                 <div class="duracion-card">
                                     <label>Duracion:<br> <b>Corto</b></label>
@@ -843,6 +852,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                         </div>
                         <div class="description">
                             <h2>Somnium</h2>
+                            <label class="seleccion-editor">SELECCIÓN DE LA COMUNIDAD</label>
                             <div class="info-mods">
                                 <div class="duracion-card">
                                     <label>Duracion:<br> <b>Muy Corto</b></label>
