--- a/traducciones/pagina-4.html
+++ b/traducciones/pagina-4.html
@@ -169,11 +169,11 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
 <!--Copiar esta parte señalada con <!- -> para cada mod que sea agregado-->      
                 <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
                     <div class="cover">
-                        <img src="../assets/logos/logo_exit_music.png" alt="">
+                        <img src="../assets/logos/logo_dokis_and_dragons.png" alt="">
                         <div class="img__back" style="background-image: url('../assets/capturas/Exit_Music/cap_1.png'); "></div>
                     </div>
                     <div class="description">
-                        <h2>Exit Music</h2>
+                        <h2>Dokis And Dragons</h2>
                         <div class="info-mods">
                             <div class="duracion-card">
                                 <label>Duracion:<br> <b>Media</b></label>
@@ -201,11 +201,11 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
 <!--AGREGAR POR DEBAJO DE ESTA LINEA LAS NUEVAS CARTAS-->
                 <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
                     <div class="cover">
-                        <img src="../assets/logos/logo_salvation.png" alt="">
+                        <img src="../assets/logos/logo_onichan_club.png" alt="">
                         <div class="img__back" style="background-image: url('../assets/capturas/Salvation/cap_1.png');"></div>
                     </div>
                     <div class="description">
-                        <h2>Salvation</h2>
+                        <h2>Onii-chan Club</h2>
                         <div class="info-mods">
                             <div class="duracion-card">
                                 <label>Duracion:<br> <b>Largo</b></label>
@@ -232,11 +232,11 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
 
                 <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
                     <div class="cover">
-                        <img src="../assets/logos/default.png" alt="">
+                        <img src="../assets/logos/logo_memorial.png" alt="">
                         <div class="img__back" style="background-image: url('../assets/capturas/Monika_Before_Story/cap_1.png');"></div>
                     </div>
                     <div class="description">
-                        <h2>Monika Before Story</h2>
+                        <h2>Memorial</h2>
                         <div class="info-mods">
                             <div class="duracion-card">
                                 <label>Duracion:<br> <b>Media</b></label>
@@ -263,11 +263,11 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
 
                 <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
                     <div class="cover">
-                        <img src="../assets/logos/logo_mc_revenge.png" alt="">
+                        <img src="../assets/logos/logo_christmas_heist_2.png" alt="">
                         <div class="img__back" style="background-image: url('../assets/capturas/MCs_Revenge/cap_1.jpg');"></div>
                     </div>
                     <div class="description">
-                        <h2>MC's Revenge</h2>
+                        <h2>Christmas Heist 2</h2>
                         <div class="info-mods">
                             <div class="duracion-card">
                                 <label>Duracion:<br> <b>Largo</b></label>
@@ -294,11 +294,11 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
 <!------------------------------------------------------------------------------------------------------>
                 <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
                         <div class="cover">
-                            <img src="../assets/logos/logo_relapse.png" alt="">
+                            <img src="../assets/logos/logo_everlasting.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Relapse/cap_1.jpg');"></div>
                         </div>
                         <div class="description">
-                            <h2>Relapse</h2>
+                            <h2>Everlasting</h2>
                             <div class="info-mods">
                                 <div class="duracion-card">
                                     <label>Duracion:<br> <b>Muy Largo</b></label>
@@ -324,11 +324,11 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                 </div>
                 <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
                         <div class="cover">
-                            <img src="../assets/logos/default.png" alt="">
+                            <img src="../assets/logos/logo_our_castle_walls.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Sweet_Dreams/cap_1.jpg');"></div>
                         </div>
                         <div class="description">
-                            <h2>Sweet Dreams</h2>
+                            <h2>Our Castle Walls</h2>
                             <div class="info-mods">
                                 <div class="duracion-card">
                                     <label>Duracion:<br> <b>Muy Corto</b></label>
@@ -354,11 +354,11 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                 </div>
                 <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
                         <div class="cover">
-                            <img src="../assets/logos/logo_a_date_with_monika.png" alt="">
+                            <img src="../assets/logos/logo_the_festival.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/gui/Dania.png');"></div>
                         </div>
                         <div class="description">
-                            <h2>A Date With Monika</h2>
+                            <h2>The Festival</h2>
                             <div class="info-mods">
                                 <div class="duracion-card">
                                     <label>Duracion:<br> <b>Media</b></label>
@@ -384,11 +384,11 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                 </div>
                 <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
                         <div class="cover">
-                            <img src="../assets/logos/default.png" alt="">
+                            <img src="../assets/logos/logo_world_of_dreams.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Nightmare/cap_1.jpg');"></div>
                         </div>
                         <div class="description">
-                            <h2>Nightmare</h2>
+                            <h2>World Of Dreams</h2>
                             <div class="info-mods">
                                 <div class="duracion-card">
                                     <label>Duracion:<br> <b>Muy Corto</b></label>
@@ -415,11 +415,11 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                 <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
                         <div class="cover">
-                            <img src="../assets/logos/default.png" alt="">
+                            <img src="../assets/logos/logo_a_normal_visual_novel.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Not_Oki_Doki_a_lost_chapter/cap_1.png');"></div>
                         </div>
                         <div class="description">
-                            <h2>Not Oki Doki A lost Chapter</h2>
+                            <h2>A Normal Visual Novel</h2>
                             <div class="info-mods">
                                 <div class="duracion-card">
                                     <label>Duracion:<br> <b>Media</b></label>
@@ -445,11 +445,11 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                 </div>
                 <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
                         <div class="cover">
-                            <img src="../assets/logos/logo_we_are_the_literature_club.png" alt="">
+                            <img src="../assets/logos/logo_within.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/We_Are_The_Literature_Club_2/cap_1.jpg');"></div>
                         </div>
                         <div class="description">
-                            <h2>We Are The Literature Club II</h2>
+                            <h2>Within</h2>
                             <div class="info-mods">
                                 <div class="duracion-card">
                                     <label>Duracion:<br> <b>Media</b></label>
@@ -475,11 +475,11 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                 </div>
                 <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
                         <div class="cover">
-                            <img src="../assets/logos/default.png" alt="">
+                            <img src="../assets/logos/logo_tropical_rain.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Yandere_Club/cap_1.jpg');"></div>
                         </div>
                         <div class="description">
-                            <h2>Yandere Club</h2>
+                            <h2>Tropical Rain</h2>
                             <div class="info-mods">
                                 <div class="duracion-card">
                                     <label>Duracion:<br> <b>Corto</b></label>
@@ -505,11 +505,11 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                 </div>
                 <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
                         <div class="cover">
-                            <img src="../assets/logos/default.png" alt="">
+                            <img src="../assets/logos/logo_the_good_endinf.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Dissaparence/cap_1.jpg');"></div>
                         </div>
                         <div class="description">
-                            <h2>Dissapearance</h2>
+                            <h2>The Good Ending</h2>
                             <div class="info-mods">
                                 <div class="duracion-card">
                                     <label>Duracion:<br> <b>Corto</b></label>
@@ -868,11 +868,11 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                 </div>
                 <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
                         <div class="cover">
-                            <img src="../assets/logos/logo_your_bully_natsuki.png" alt="">
+                            <img src="../assets/logos/default.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Your_Bully_Natsuki/cap_1.jpg');"></div>
                         </div>
                         <div class="description">
-                            <h2>Your Bully: Natsuki</h2>
+                            <h2>Sayoris Gets A Burger</h2>
                             <div class="info-mods">
                                 <div class="duracion-card">
                                     <label>Duracion:<br> <b>Muy Corto</b></label>
